--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             </div>
         </div>
         <div id="panel-canvas">
-            <canvas id="pantalla" width=500 height=500 inputmode="text"></canvas>
+            <canvas id="pantalla" width=500 height=500></canvas>
+            <input id="input-teclado">
         </div>
     </div>
     <script type="text/javascript" src="Js/bancoDePalabras.js"></script>
