Correción de efecto de botón para tablets y moviles

--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
     </audio>
     <script type="text/javascript" src="Js/fuegosArtificiales.js"></script>
     <div id="inicio">
-        <div id="div-titulo">
+        <div id="titulo">
             <img class="imagen" width=65" heigth="65" src="horca4.png">
             <h1 class="titulo">LA H&nbsp&nbsp&nbsp&nbspRCA</h1>
         </div>
-        <h2 class="subtitulo">¡Descubre la palabra escondida y salva a Rigoberto de su destino!</h2>
-        <p id="instrucciones">Opcional: ¡Agrega nuevas palabras a nuestro banco de palabras! Puedes agregar varias de
-            ellas separándolas por un espacio. No se aceptan números ni caracteres especiales.</p>
+        <div id="subtitulo">
+            <h2 class="subtitulo">¡Descubre la palabra escondida y salva a Rigoberto de su destino!</h2>
+            <p id="instrucciones">Opcional: ¡Agrega nuevas palabras a nuestro banco de palabras! Puedes agregar varias
+                de ellas separándolas por un espacio. No se aceptan números ni caracteres especiales.</p>
+        </div>
     </div>
     <div id="contenedor">
-        <div id="panel-juego">
+        <div id="panel-botones">
             <button class="btn desplazar-original" id="boton-iniciar-juego">Iniciar juego</button>
             <div id="panel-agregar-palabra">
                 <input class="text-input desplazar-original" type="text" id="ingresar-nueva-palabra"
