Agregado de span

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         </div>
         <div id="subtitulo">
             <h2 class="subtitulo">¡Descubre la palabra escondida y salva a Rigoberto de su destino!</h2>
-            <p id="instrucciones">Opcional: ¡Agrega nuevas palabras a nuestro banco de palabras! Puedes agregar varias
-                de ellas separándolas por un espacio. No se aceptan números ni caracteres especiales.</p>
+            <p id="instrucciones">¡Agrega nuevas palabras a nuestro banco de palabras! Las mismas deben tener un mínimo
+                de 3 letras y un máximo de 17. Puedes agregar más de una palabra por vez separándolas con un espacio. No
+                se aceptan números ni caracteres especiales.</p>
         </div>
     </div>
     <div id="contenedor">
@@ -46,6 +47,7 @@
                 </button>
             </div>
         </div>
+        <span class="invisible2">¡Alguna palabra no cumple con los requisitos!</span>
         <div id="panel-canvas">
             <canvas id="pantalla" width=400 height=500></canvas>
             <input id="input-teclado">
