Redimensionamiento de zona de evento de teclado

--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
                 </button>
             </div>
         </div>
-        <div id="panel-canvas">
-            <canvas id="pantalla" width=400 height=500></canvas>
-            <input id="input-teclado">
-        </div>
+        <div id="subcontenedor">
+            <div id="panel-canvas">
+                <canvas id="pantalla" width=400 height=500></canvas>
+                <input id="input-teclado">
+            </div>
+        </div>  
     </div>
     <script type="text/javascript" src="Js/bancoDePalabras.js"></script>
     <script type="text/javascript" src="Js/ahorcado.js"></script>
