Separación de las animaciones en archivo aparte

--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
         </div>  
     </div>
     <script type="text/javascript" src="Js/bancoDePalabras.js"></script>
+    <script type="text/javascript" src="Js/animaciones.js"></script>
     <script type="text/javascript" src="Js/ahorcado.js"></script>
     <script type="text/javascript" src="Js/agregarPalabra.js"></script>
     <script type="text/javascript" src="Js/canvas.js"></script>
 </body>
 
 <footer>
-    <p>Copyright © 2022 María Sofía Fregona, v 1.1.1 beta</p>
+    <p>Copyright © 2022 María Sofía Fregona, v 1.1.2 beta</p>
 </footer>
 
 </html>
