--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         </div>
         <div id="subtitulo">
             <h2 class="subtitulo">¡Descubre la palabra escondida y salva a Rigoberto de su destino!</h2>
-            <p id="instrucciones">¡Agrega nuevas palabras a nuestro banco de palabras! Las mismas deben tener un mínimo
-                de 3 letras y un máximo de 17. Puedes agregar más de una palabra por vez separándolas con un espacio. No
+            <p id="instrucciones">¡Agrega nuevas palabras a nuestro banco de palabras! Las mismas deben tener entre 3 y
+                17 letras, inclusive. Puedes agregar más de una palabra por vez separándolas con la barra espaciadora.
+                No
                 se aceptan números ni caracteres especiales.</p>
         </div>
     </div>
@@ -52,7 +53,7 @@
                 <canvas id="pantalla" width=400 height=500></canvas>
                 <input id="input-teclado">
             </div>
-        </div>  
+        </div>
     </div>
     <script type="text/javascript" src="Js/bancoDePalabras.js"></script>
     <script type="text/javascript" src="Js/animaciones.js"></script>
@@ -62,7 +63,7 @@
 </body>
 
 <footer>
-    <p>Copyright © 2022 María Sofía Fregona, v 1.1.2 beta</p>
+    <p>Copyright © 2022 María Sofía Fregona, v 1.1.3 beta</p>
 </footer>
 
 </html>
