--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
             <h2 class="subtitulo">¡Descubre la palabra escondida y salva a Rigoberto de su destino!</h2>
             <p id="instrucciones">¡Agrega nuevas palabras a nuestro banco de palabras! Las mismas deben tener entre 3 y
                 17 letras, inclusive. Puedes agregar más de una palabra por vez separándolas con la barra espaciadora.
-                No
-                se aceptan números ni caracteres especiales.</p>
+                No se aceptan números ni caracteres especiales.</p>
         </div>
     </div>
     <div id="contenedor">
