Modificación de texto

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div id="subtitulo">
             <h2 class="subtitulo">¡Descubre la palabra escondida y salva a Rigoberto de su destino!</h2>
-            <p id="instrucciones">¡Agrega nuevas palabras a nuestro banco de palabras! Las mismas deben tener entre 3 y
+            <p id="instrucciones">¡Agrega nuevas palabras a nuestro banco de palabras! Las mismas pueden tener entre 3 y
                 17 letras, inclusive. Puedes agregar más de una palabra por vez separándolas con la barra espaciadora.
                 No se aceptan números ni caracteres especiales.</p>
         </div>
@@ -43,7 +43,7 @@
                 <input class="text-input desplazar-original" type="text" id="ingresar-nueva-palabra"
                     placeholder="Escriba una nueva palabra">
                 <button class="btn desplazar-original" id="boton-agregar-palabra">
-                    <p class="visible" id="texto-boton">Agregar palabra</p>
+                    <p class="visible" id="texto-boton">Agregar palabras</p>
                 </button>
             </div>
         </div>
