Corrección de lo que faltaba

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <audio class="audio" id="audio2" controls>
         <source type="audio/mp3" src="Sonidos/sfxpop.mp3">
     </audio>
+    <audio class="audio" id="audio3" controls>
+        <source type="audio/mp3" src="Sonidos/sfx-piano-fantasia2.mp3">
+    </audio>
+    <audio class="audio" id="audio4" controls>
+        <source type="audio/mp3" src="Sonidos/sfx-piano-mystery.mp3">
+    </audio>
     <script type="text/javascript" src="Js/fuegosArtificiales.js"></script>
     <div id="inicio">
         <div id="titulo">
@@ -31,8 +37,8 @@
         </div>
         <div id="subtitulo">
             <h2 class="subtitulo">¡Descubre la palabra escondida y salva a Rigoberto de su destino!</h2>
-            <p id="instrucciones">¡Agrega nuevas palabras a nuestro banco de palabras! Las mismas pueden tener entre 3 y
-                17 letras, inclusive. Puedes agregar más de una palabra por vez separándolas con la barra espaciadora.
+            <p id="instrucciones">¡Agrega nuevas palabras a nuestro banco de palabras!<br>Las mismas pueden tener entre 3 y
+                17 letras. Puedes agregar más de una palabra por vez separándolas con la barra espaciadora.
                 No se aceptan números ni caracteres especiales.</p>
         </div>
     </div>
