--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </body>
 
 <footer>
-    <p>Copyright © 2022 María Sofía Fregona, v 1.1.4 beta</p>
+    <p>Copyright © 2022 María Sofía Fregona, v 1.1.5</p>
 </footer>
 
 </html>
