Corección texto instrucciones

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div id="subtitulo">
             <h2 class="subtitulo">¡Descubre la palabra escondida y salva a Rigoberto de su destino!</h2>
-            <p id="instrucciones">¡Agrega nuevas palabras a nuestro banco de palabras!<br>Las mismas pueden tener entre 3 y
+            <p id="instrucciones">¡Agrega nuevas palabras!<br>Las mismas pueden tener entre 3 y
                 17 letras. Puedes agregar más de una palabra por vez separándolas con la barra espaciadora.
                 No se aceptan números ni caracteres especiales.</p>
         </div>
@@ -68,7 +68,7 @@
 </body>
 
 <footer>
-    <p>Copyright © 2022 María Sofía Fregona, v 1.1.5</p>
+    <p>Copyright © 2022 María Sofía Fregona, v 1.1.6</p>
 </footer>
 
 </html>
